scripts/nullaway/original/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8.txt
../original/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/ElevatorController.java:75: error: [NullAway] assigning @Nullable expression to @NonNull field
		nextFloor = null;
		          ^
    (see http://t.uber.com/nullaway )
../original/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/utils/TextAreaAppender.java:12: error: [NullAway] assigning @Nullable expression to @NonNull field
	private JTextArea textArea = null;
	                  ^
    (see http://t.uber.com/nullaway )
../original/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:43: error: [NullAway] initializer method does not guarantee @NonNull fields mainFrame (line 36), controlPanel (line 37), threadGroup (line 38), floorsMap (line 39), building (line 40), timer (line 41) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public ActionViewController() {
	       ^
    (see http://t.uber.com/nullaway )
../original/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:124: error: [NullAway] dereferenced expression view is @Nullable
		view.setElevatorPassengers(elevator.getElevatorPassengers());
		    ^
    (see http://t.uber.com/nullaway )
../original/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:131: error: [NullAway] dereferenced expression floorsMap.get(floor) is @Nullable
			floorsMap.get(floor).update(floor.getDispatchPassengers(),
			                    ^
    (see http://t.uber.com/nullaway )
../original/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/ActionViewController.java:136: error: [NullAway] dereferenced expression floorsMap.get(elevator.getCurrentFloor()) is @Nullable
		floorsMap.get(elevator.getCurrentFloor()).setElevatorPassengers(
		                                         ^
    (see http://t.uber.com/nullaway )
../original/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/view/FloorView.java:146: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		elevator = new ElevatorView(null);
		                            ^
    (see http://t.uber.com/nullaway )
../original/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/view/FloorView.java:158: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
		elevator.updateContainer(null);
		                         ^
    (see http://t.uber.com/nullaway )
../original/urlb879d9e865_ogotalski_elevator_tgz-pJ8-ElevatorTaskJ8/src/by/epam/lab/controller/Configuration.java:29: error: [NullAway] @NonNull static field configuration not initialized
	private static Configuration configuration;
	                             ^
    (see http://t.uber.com/nullaway )
9 errors
